[package]
name = "picohitbox"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = { git = " https://github.com/rp-rs/rp-hal.git",  version = "0.3.0" }
pico = { git = "https://github.com/rp-rs/rp-hal.git", version = "0.1.0" }
embedded-hal = { version = "0.2.6", features = ["unproven"] }
cortex-m-rt = { version = "0.7", optional = true }
panic-halt = "0.2.0"
embedded-time = "0.12.0"
usb-device= "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.1"
futures = { version = "0.3", default-features = false, optional = true }

[dependencies.embassy]
git = "https://github.com/embassy-rs/embassy"
rev = "6d6e6f55b8a9ecd38b5a6d3bb11f74b2654afdeb"
optional = true

# namespaced features will let use use "dep:embassy-traits" in the features rather than using this
# trick of renaming the crate.
[dependencies.embassy_traits]
git = "https://github.com/embassy-rs/embassy"
rev = "6d6e6f55b8a9ecd38b5a6d3bb11f74b2654afdeb"
package = "embassy-traits"
optional = true

[dev-dependencies]
panic-halt= "0.2.0"
embedded-hal ="0.2.5"
cortex-m-rtic = "0.6.0-rc.4"
nb = "1.0"
i2c-pio = { git = "https://github.com/ithinuel/i2c-pio-rs", rev = "afc2dad0e955da2b712d7f7cd78c7af88ddc6a45" }

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]
embassy-traits = ["futures", "embassy", "embassy_traits"]